// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`defineConfig > basic set 1`] = `
{
  "logLevel": "info",
  "plugins": [
    {
      "name": "root/minify",
    },
  ],
  "render": {
    "disableDefaultStyle": false,
    "inlineCss": false,
    "minify": true,
    "plainText": false,
    "pretty": false,
  },
}
`;

exports[`defineConfig > de-dupe plugins 1`] = `
{
  "logLevel": "info",
  "plugins": [
    {
      "name": "batman",
    },
  ],
  "render": {
    "disableDefaultStyle": false,
    "inlineCss": false,
    "minify": false,
    "plainText": false,
    "pretty": false,
  },
}
`;

exports[`defineConfig > defaults 1`] = `
{
  "logLevel": "info",
  "plugins": [],
  "render": {
    "disableDefaultStyle": false,
    "inlineCss": false,
    "minify": false,
    "plainText": false,
    "pretty": false,
  },
}
`;

exports[`defineConfig > minify and pretty 1`] = `
{
  "logLevel": "info",
  "plugins": [
    {
      "name": "root/minify",
    },
    {
      "name": "root/pretty",
    },
  ],
  "render": {
    "disableDefaultStyle": false,
    "inlineCss": false,
    "minify": true,
    "plainText": false,
    "pretty": true,
  },
}
`;

exports[`defineConfig > plain 1`] = `
{
  "logLevel": "info",
  "plugins": [],
  "render": {
    "disableDefaultStyle": false,
    "inlineCss": false,
    "minify": true,
    "plainText": true,
    "pretty": true,
  },
}
`;
